# tum-bc

./: .gitignore  README.md  adapter.py  pyproject.toml  script.py
config/: neo4j_config.yaml  schema_config.yaml
